# cms-backend/src/api/modules/dto/update-module.dto.ts
@@ -1,0 +1,12 @@
+import { IsBoolean, IsString } from "class-validator";
+
+export class UpdateModuleDto {
+    @IsBoolean()
+    isEnabled: boolean;
+
+    @IsString()
+    apiKey: string;
+
+    @IsString()
+    typeId: string;
+}
