# cms-backend/swagger.json
@@ -191,6 +191,72 @@
           "Instances"
         ]
       }
+    },
+    "/modules/{id}": {
+      "post": {
+        "operationId": "ModulesController_update",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateModuleDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Modules"
+        ]
+      }
+    },
+    "/modules/{instanceId}": {
+      "get": {
+        "operationId": "ModulesController_getModules",
+        "parameters": [
+          {
+            "name": "instanceId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/GetModuleDto"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Modules"
+        ]
+      }
     }
   },
   "info": {
@@ -371,6 +437,37 @@
           "updatedAt"
         ]
       },
+      "UpdateModuleDto": {
+        "type": "object",
+        "properties": {}
+      },
+      "GetModuleDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string"
+          },
+          "apiKey": {
+            "type": "string"
+          },
+          "baseUrl": {
+            "type": "string"
+          },
+          "isEnabled": {
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "id",
+          "type",
+          "apiKey",
+          "baseUrl",
+          "isEnabled"
+        ]
+      },
       "Role": {
         "type": "string",
         "enum": [
@@ -388,10 +485,14 @@
           "institution:users",
           "institution:read",
           "users:manage",
-          "users:read"
+          "users:read",
+          "(instance):module:create",
+          "(instance):module:read",
+          "(instance):module:update",
+          "(instance):module:delete"
         ],
         "description": "Available permissions in the system",
-        "example": "institution:read"
+        "example": "(instance):module:read"
       }
     }
   }
